k8s/volume-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-worker
  namespace: moex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volume-worker
  template:
    metadata:
      labels:
        app: volume-worker
    spec:
      containers:
        - name: volume-worker
          image: krapa666/moex-backend:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "-m", "app.volume_worker"]
