k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moex-ingress
  namespace: moex
spec:
  ingressClassName: nginx
  rules:
    - host: moex.junnylab.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
